--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: PsychStudent
-Title: What the Package Does (One Line, Title Case)
+Title: Programmatic Tools for Students in Psychology
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Shea",
