--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "shea.fyffe@gmail.com",
            comment = c(ORCID = "https://orcid.org/0000-0003-0312-7915"))
-Description: What the package does (one paragraph).
+Description: Still figuring out what the package does.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Language: es
